"Update portfolio: changed about section"

--- a/index.html
+++ b/index.html
@@ -1168,8 +1168,113 @@
                         </a>
                     </div>
                 </div>
+                
             </div>
-
+                <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-mobile-alt"></i>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Arvya X - Smart Yoga Mat App</h3>
+                    <p class="project-description">
+                        UI/UX prototype for a smart yoga mat companion app created during internship at Revoltronx. 
+                        Features interactive Figma designs with modern, engaging user experience.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Figma</span>
+                        <span class="tech-tag">UI/UX Design</span>
+                        <span class="tech-tag">Prototyping</span>
+                        <span class="tech-tag">Mobile Design</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://arvyax.netlify.app/" class="project-link">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="https://github.com/Runika24/Arvyax.git" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+                        <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-ticket-alt"></i>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Take My Ticket</h3>
+                    <p class="project-description">
+                        A comprehensive ticket resale and event platform where users can buy, sell, and manage event tickets. 
+                        Features secure authentication, event creation, resale listings, testimonials, and region-based filtering.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">HTML5</span>
+                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">Firebase</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/Runika24/Take_my_ticket.git" class="project-link">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="https://github.com/Runika24/Take_my_ticket.git" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+                <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-tools"></i>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">ServEase</h3>
+                    <p class="project-description">
+                        Full-stack Urban Company-like service booking platform. Users can book services, 
+                        leave reviews, and manage bookings while admins handle services, analytics, and reports.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">React.js</span>
+                        <span class="tech-tag">Node.js</span>
+                        <span class="tech-tag">Express</span>
+                        <span class="tech-tag">MongoDB</span>
+                        <span class="tech-tag">JWT</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="serv-ease.netlify.app" class="project-link">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="https://github.com/Runika24/Serv-ease.git" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+                        <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-car"></i>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Vehicle Security & Monitoring System</h3>
+                    <p class="project-description">
+                        Advanced IoT-based vehicle security system with real-time GPS tracking, 
+                        remote engine control, and anti-theft features. Built with Android app integration.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">IoT</span>
+                        <span class="tech-tag">GPS</span>
+                        <span class="tech-tag">Android</span>
+                        <span class="tech-tag">IR Sensors</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="https://github.com/Runika24" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
             <div class="project-card">
                 <div class="project-image">
                     <i class="fas fa-chart-line"></i>
