--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
                 <a href="#contact" class="btn btn-secondary">
                     <i class="fas fa-envelope"></i> Get In Touch
                 </a>
-                <a href="Runika_Resume_ATS_OnePage.docx" download class="btn btn-primary">
+                <a href="Runika_resume_ATS (2).pdf" download class="btn btn-primary">
                 <i class="fas fa-file-download"></i> Download Resume
                 </a>
             </div>
